# motion_photo_video_extractor

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
heic/: heifboxes.cpp  heifboxes.h  heifreader.cpp  heifreader.h
motion_photo_video_extractor/: CMakeLists.txt  main.cpp
