# CMakeList.txt : CMake project for motion_photo_video_extractor, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("motion_photo_video_extractor")

# Add source to this project's executable.
add_executable (motion_photo_video_extractor "main.cpp" )

# TODO: Add tests and install targets if needed.
